# grpcsnoop

./: .gitignore  CLAUDE.md  Makefile  README.md  grpcsnoop.bpf.c  main.js  proto.js  render.js  schema.js  tcpstream.js
demo/: Dockerfile  README.md  client.py  docker-compose.yml  down.sh  server.py  up.sh
testservice/: client.py  pyproject.toml  server.py  test.proto  test_pb2.py  test_pb2_grpc.py
tools/: gen-schema.py
