[tool.poetry]
name = "protosnoop-testservice"
version = "0.1.0"
description = "Test gRPC service for protosnoop verification"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.48"
grpcio-tools = "^1.48"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
